--- a/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Styles/Site.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     align-content: flex-start;
     align-items: flex-start;
+    margin-bottom: 15px;
 }
 
 main{
@@ -111,6 +112,13 @@ th {
 
 .img_StatusNoteGroen {
     background-image: url('../Images/Note_V.png');
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+}
+
+.img_Vakantie {
+    background-image: url('../Images/icon_Sun.png');
     width: 16px;
     height: 16px;
     display: inline-block;
@@ -263,7 +271,7 @@ th {
     height: 50px;
     border: none;
     font-size: large;
-    color: #000;
+    color: #676767;
     border: 2px solid #DB5C3D;
     margin: 5px;
 }
@@ -274,7 +282,8 @@ th {
 }
 
 .optionButton:hover {
-    background-color: #D88977;
+    background-color: #FFF5F5;
+    color: #676767;
 }
 
 .containerOptions {
@@ -288,7 +297,7 @@ th {
 
 .itemBox {
     border-radius: 10px 0px;
-    min-width: 300px;
+    min-width: 280px;
     width: 45%;
     max-width: 500px;
     margin-bottom: 20px;
@@ -349,4 +358,69 @@ th {
 
 .itemContentText{
     padding: 2px 10px;
+}
+
+.homeLinkButton{
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+    border-radius: 10px 0px;
+    /*width: 280px;*/
+    min-width: 300px;
+    width: 45%;
+    max-width: 500px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    background-color: #DB5C3D;
+    padding: 7px;
+    font-size: large;
+    color: #FFF;
+    font-size:22px;
+    line-height: 50px;
+}
+
+.homeLinkButtonContainer{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-around;
+    align-content: flex-start;
+}
+
+.roosterBox{
+    margin-bottom: 2px;
+    width: 100%;
+    max-width: 100%;
+}
+
+.roosterBox > .itemTitle {
+
+    font-size:15px;
+}
+
+.roosterBox > .itemTitle > div {
+    display: inline-block;
+
+}
+
+.roosterModule{
+    min-width: 250px;
+}
+
+.roosterDatum, .roosterTijd{
+    min-width: 125px;
+}
+
+.itemContentText.rooster{
+    display:inline-block;
+    min-width: 200px;
+}
+
+.loginForm > button{
+    border: 2px solid #676767;
+    border-radius: 5px 0px;
+    color: #676767;
+}
+
+.loginForm > button:hover{
+    background-color: #FFF5F5;
 }
