--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
@@ -76,7 +76,7 @@
     string message = "Alles gaat goed.";
 
     List<Administratix.BLL.LesDavinci> lessenrooster = new List<Administratix.BLL.LesDavinci>();
-    List<Administratix.BLL.Kalender> feestdagen = new List<Administratix.BLL.Kalender>();
+    List<Administratix.BLL.KalenderDag> feestdagen = new List<Administratix.BLL.KalenderDag>();
     if (Session["cursist"] != null)
     {
         Administratix.BLL.Cursist cursist = (Administratix.BLL.Cursist)Session["cursist"];
