--- a/Code/Test/CVO-Mobile/CVO-Mobile/Default.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Default.cshtml
@@ -40,6 +40,7 @@
 @if (Session["cursist"] != null)
 {
     <div class="homeLinkButtonContainer">
+        <a class="homeLinkButton" href="~/Deelpagina's/Kalender.cshtml">Kalender</a>
         <a class="homeLinkButton" href="~/Deelpagina's/Deadlines.cshtml">Deadlines</a>
         <a class="homeLinkButton" href="~/Deelpagina's/Evenementen.cshtml">Evenementen</a>
         <a class="homeLinkButton" href="~/Deelpagina's/ExamenData.cshtml">ExamenData</a>
