--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Evenementen.cshtml
@@ -1,7 +1,9 @@
 ﻿@{
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Evenementen";
-
+    
+    Session["Page"] = "3";
+    
     string action = "";
 
     Session["loginError"] = "";
