--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Kalender.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Kalender.cshtml
@@ -2,6 +2,8 @@
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Kalender";
 
+    Session["Page"] = "1";
+    
     string action = "";
 
     Session["loginError"] = "";
