--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Lessenrooster.cshtml
@@ -2,6 +2,8 @@
     Layout = "~/Shared/_Layout.cshtml";
     Page.Title = "Lessenrooster";
 
+    Session["Page"] = "6";
+
     string action = "";
 
     Session["loginError"] = "";
