--- a/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Shared/_Nav.cshtml
@@ -4,14 +4,21 @@
 <nav>
     <div class="navLogo">
         <img src="~/Images/Logo_mobileCVO.jpg" alt="Logo MobileCVO" />
-        
+        @if (Session["cursist"] != null)
+        {
             <a href="~/"><img src="~/Images/1431366103_text_align_full-128.png" alt="Logo Sandwich" /></a>
-            <img src="~/Images/nav_left.png" alt="Nav Links" />
-            <img src="~/Images/nav_right.png" alt="Nav Rechts" />
-
+            @if (Session["Page"] != "0")
+            {
+                <a href="@Administratix.Model.pagina.vorige(Convert.ToInt32(Session["Page"]))"><img src="~/Images/nav_left.png" alt="Nav Links" /></a>
+            }
+            @if (Session["Page"] != "7")
+            {
+                <a href="@Administratix.Model.pagina.vorige(Convert.ToInt32(Session["Page"]))"><img src="~/Images/nav_right.png" alt="Nav Rechts" /></a>
+            }
+        }
     </div>
-    
-    
+
+
 
     @if (Session["cursist"] != null)
     {
@@ -22,5 +29,5 @@
             <button type="submit" name="action" value="logout">Log uit</button>
         </form>
     }
-    
+
 </nav>
