--- a/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Kalender.cshtml
+++ b/Code/Test/CVO-Mobile/CVO-Mobile/Deelpagina's/Kalender.cshtml
@@ -37,10 +37,10 @@
         }
     }
 
-    if (Session["cursist"] == null)
-    {
-        Response.Redirect("~/Deelpagina's/Default.cshtml");
-    }
+    //if (Session["cursist"] == null)
+    //{
+    //    Response.Redirect("~/Deelpagina's/Default.cshtml");
+    //}
 
     // Querrystring voor maand vooruit/achteruit
     int maandOffset = 0;
